--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.15.2",
     "morgan": "~1.8.1",
     "pug": "~2.0.0-beta11",
+    "randomstring": "^1.1.5",
     "serve-favicon": "~2.4.2",
     "socket.io": "^2.0.1",
     "uuid": "^3.0.1"
