--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
     "helmet": "^3.6.1",
+    "knuth-shuffle": "^1.0.1",
     "morgan": "~1.8.1",
     "pug": "~2.0.0-beta11",
     "randomstring": "^1.1.5",
